# ngFDTD

./: CMakeLists.txt  README  README.md  config.h.in  main.cmake
_stuff/_old/scape/: Readme.txt  log.lua  table.lua
_stuff/_old/scripts/: CMakeLists.txt
_stuff/old/: README
_stuff/old/core/: CMakeLists.txt~
_stuff/old/run/: import
_stuff/old/scape/: module.lua  os.lua  unit.lua
cmake/custom/: distclean.cmake
cmake/macros/: install_headers.cmake  install_lua_all.cmake  macro_install_binaries.cmake  macro_install_headers.cmake  macro_install_libs.cmake  macro_install_lua.cmake
cmake/modules/: FindEigen3.cmake  FindMetis.cmake  FindSuiteSparse.cmake
cmake/modules/_old/: CheckFortranCompilerFlag.cmake  FindFFTW.cmake  FindLua51.cmake  FindSuperLU.cmake  UseDoxygen.cmake
cmake/toolchain/: amd64-mingw32.cmake  gcc64.cmake  i686-mingw32.cmake  intel64.cmake  mingw32.cmake
extras/: CONTROL.cmake
extras/LuaJIT/: control.cmake  find.cmake
extras/LuaJIT/patch/src/: CMakeLists.txt  CMakeLists.txt~
extras/boost/: control.cmake  find.cmake
extras/eigen3/: control.cmake
extras/eigen3/PATCH/: CMakeLists.txt
extras/fftw/: CONTROL.cmake  control.cmake
extras/fftw/PATCH/: CMakeLists.txt
extras/fftw/patch/: CMakeLists.txt  dummy.c
extras/lua/: control.cmake  find.cmake
extras/luafilesystem/: control.cmake
extras/luafilesystem/patch/: CMakeLists.txt
extras/luafilesystem/patch/src/: CMakeLists.txt
extras/luasocket/: #FIND.cmake#  FIND.cmake  control.cmake
extras/luasocket/PATCH/: CMakeLists.txt
extras/luasocket/PATCH/src/: CMakeLists.txt  CMakeLists.txt~
extras/luasocket/patch/src/: CMakeLists.txt
extras/srlua/: control.cmake
extras/srlua/PATCH/: CMakeLists.txt
setup/: compiler.cmake  copyright.txt  install.cmake  package.cmake  project.cmake  search.cmake
source/: CMakeLists.txt  _xlib.lua  achim.lua  create_glue_code.lua  fabian.lua  fdtd.lua  mpi_test.lua  neon_start.lua  scape.lua  xlib.lua
source/_old/core/: CMakeLists.txt
source/_old/scape/: class.lua  ffi.lua  object.lua  tests.lua
source/_old/scripts/: make_init.lua
source/_old/wrap/: CMakeLists.txt
source/_old/wrap/luawrap/: LuaClass.hpp  LuaContext.cpp  test.cxx
source/_xlib/: debug.lua  ffi.lua  fun.lua  module.lua  proto.lua  table.lua  unit.lua
source/_xlib/collection/: BinaryHeap.lua  BinarySearchTree.lua  Deque.lua  GeneralTree.lua  IGenericContainer.lua  IGenericDoubleEndedQueue.lua  IGenericQueueOrStack.lua  IGenericSet.lua  IGenericTree.lua  IReverseEnumerable.lua  ISearchTree.lua  ISearchable.lua  ISortable.lua  List.lua  NaryTree.lua  Set.lua  utils.lua
source/_xlib/file/: istream.lua  ostream.lua
source/_xlib/io/: fs.lua
source/_xlib/math/: complex.lua  dists.lua  quants.lua  vector.lua
source/_xlib/os/: info.lua  sysclock.lua
source/_xlib/other/: cmake_install.cmake
source/_xlib/string/: encode.lua  ostream.lua  stream.lua  version.lua
source/_xlib/struct/: deque.lua  list.lua  set.lua
source/_xlib/table/: eval.lua  expr.lua  ostream.lua
source/_xlib/tests/: class-ordering.lua
source/_xlib/utils/: args.lua
source/achim/: tests.lua
source/ctests/: a.out  xlib_data_memblock_fibonacci1.c
source/fabian/: tests.lua
source/fdtd/: #array.lua#  .#array.lua  array.lua  array.lua~  field.lua  field.lua~  material.lua  math.lua  models.lua  scene.lua  shapes.lua
source/fdtd/math/: vec3.lua
source/fdtd/models/: basetype.lua  response.lua
source/fdtd/shapes/: basetype.lua  primitive.lua  sphere.lua
source/geo/: CMakeLists.txt  main.cxx
source/luatests/: mpi_ping_pong.lua  mpi_ping_pong.lua~  mpi_ring.lua  mpi_test.lua~  mpi_test_init.lua  mpi_test_mpi_init.lua
source/main/: CMakeLists.txt
source/main/src/: CMakeLists.txt
source/neon/: CMakeLists.txt  startup.lua
source/neon/src/: CMakeLists.txt  lua_bytecode.c  lua_bytecode.h  lua_preload.c  lua_preload.h  luajit.c  neon.c
source/run/: docgen  lib.lua  sign
source/scape/: CMakeLists.txt  coroutine.lua  debug.lua  file.lua  fun.lua  io.lua  lib.lua  math.lua  proto.lua  struct.lua  utils.lua
source/scape/collection/: AVLTree.lua  Bag.lua  BinaryHeap.lua  BinarySearchTree.lua  Bits.lua  Deque.lua  DequeSet.lua  FibonacciHeap.lua  GeneralTree.lua  IEnumerable.lua  IGenericDoubleEndedQueue.lua  IGenericPriorityQueue.lua  IGenericQueueOrStack.lua  IGenericTree.lua  IReverseEnumerable.lua  ISearchable.lua  ListSet.lua  Set.lua
source/scape/file/: istream.lua  ostream.lua
source/scape/fun/: mexpr.lua
source/scape/io/: fs.lua
source/scape/math/: dists.lua  matrix.lua  quants.lua  vector.lua
source/scape/os/: info.lua
source/scape/scape/: Makefile
source/scape/src/: bytecast.h
source/scape/string/: encode.lua  ostream.lua  stream.lua  version.lua
source/scape/struct/: bag.lua  deque.lua  list.lua  set.lua
source/scape/table/: istream.lua  serialize.lua
source/scape/utils/: args.lua
source/scripts/: docgen.lua  glue_main.lua  import.lua  lib.lua  sign.lua  version.lua
source/test/: CMakeLists.txt  mpi_test.lua  test.c
source/test/src/: CMakeLists.txt  main.cxx
source/tests/: mpi_test.lua
source/xlib/: CMakeLists.txt  class.lua  comms.lua  config.lua  coroutine.lua  data.lua  debug.lua  ffi.lua  file.lua  fun.lua  geo.lua  io.lua  lib.lua  log.lua  math.lua  module.lua  module_2.lua  object.lua  os.lua  proto.lua  strict.lua  string.lua  struct.lua  table.lua  tests.lua  types.lua  unit.lua  utils.lua
source/xlib/collection/: AVLTree.lua  Bag.lua  BinaryHeap.lua  BinarySearchTree.lua  BinaryTree.lua  Bits.lua  Deque.lua  DequeSet.lua  FibonacciHeap.lua  GeneralTree.lua  IEnumerable.lua  IGenericContainer.lua  IGenericDoubleEndedQueue.lua  IGenericPriorityQueue.lua  IGenericQueue.lua  IGenericQueueOrStack.lua  IGenericSet.lua  IGenericStack.lua  IGenericTree.lua  IReverseEnumerable.lua  ISearchTree.lua  ISearchable.lua  ISortable.lua  List.lua  ListSet.lua  NaryTree.lua  Set.lua  utils.lua
source/xlib/comms/: mpi.lua
source/xlib/src/: CMakeLists.txt  bytecast.c  lib.c  osinfo.h  sysclock.c  sysclock.h
tools/: CMakeLists.txt
(+161 files in other folders)
